--- a/newmenu.html
+++ b/newmenu.html
@@ -12,9 +12,9 @@
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid" style="margin-top: 20px;">
         <div class="row">
-            <div class="col-md-2" style="background: #ddd;min-height: 800px;">
+            <div class="col-md-2" style="background: #ddd;min-height: 830px;">
                 <ul id="mainNav" class="nav nav-tabs nav-stacked">
                     <li>
                         <a href="#interfaceSetting" class="nav-header collapsed" data-toggle="collapse">
@@ -23,15 +23,15 @@
                         </a>
                         <ul id="interfaceSetting" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./interface/eth.asp" target="mainframe">ETH                             
+                                <a href="./interface/eth.asp" target="mainframe">ETH
                                 </a>
                             </li>
                             <li>
-                                <a href="./interface/trunk.asp" target="mainframe">TRUNK      
+                                <a href="./interface/trunk.asp" target="mainframe">TRUNK
                                 </a>
                             </li>
                             <li>
-                                <a href="./interface/vlan.asp" target="mainframe">VLAN   
+                                <a href="./interface/vlan.asp" target="mainframe">VLAN
                                 </a>
                             </li>
                         </ul>
@@ -74,7 +74,7 @@
                         </a>
                         <ul id="SysMain" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./sysSetting/configinfo.asp" target="mainframe">配置信息</a>
+                                <a href="./sysSetting/configinfo.html" target="mainframe">配置信息</a>
                             </li>
                             <li>
                                 <a href="./sysSetting/upgrade.html" target="mainframe">软件升级</a>
