--- a/sysSetting/configinfo.html
+++ b/sysSetting/configinfo.html
@@ -15,47 +15,50 @@
     style="font-weight: bolder; text-align: center;background-color: rgb(241,241,241);height: 48px;line-height: 48px;">
     配置</h3>
   <br>
-  <form name="sysConfigBackup" action=/sysConfigBackup.cfg method="post">
-    <table width="600" height="90" border="0" cellpadding="0" cellspacing="0">
-      <tr>
-        <td height="20" colspan="2" class="tableTitle">软件配置备份</td>
-      </tr>
-      <tr>
-        <td height="20" colspan="2">&nbsp;</td>
-      </tr>
-      <tr>
-        <td width="100" height="20">
-          <button type="submit" class="btn btn-primary">备份
-          </button>
-        </td>
-        <td width="500" height="20">保存所有配置信息到你所指定的位置上</td>
-      </tr>
-      <tr>
-        <td height="20" colspan="2">&nbsp;</td>
-      </tr>
-    </table>
-  </form>
-  </form>
-  <form name="web_sys_restore_def" action=/goform/sysRestore method="post">
-    <table width="600" height="90" border="0" cellpadding="0" cellspacing="0">
-      <tr>
-        <td height="20" colspan="2" class="tableTitle">恢复出厂配置</td>
-      </tr>
-      <tr>
-        <td height="20" colspan="2">&nbsp;</td>
-      </tr>
-      <tr>
-        <td width="100" height="20">
-          <button type="submit" class="btn btn-primary">恢复出厂配置
-        </td>
-        <td width="500" height="20" align="center">该设备将恢复到出厂时的默认配置，以前的配置信息将会全部丢失。</td>
-      </tr>
-      <tr>
-        <td height="20" colspan="2">&nbsp;</td>
-      </tr>
-    </table>
 
-  </form>
+  <div class="container-fluid">
+    <div style="margin: 20px 0px;">
+      <form name="sysConfigBackup" action=/sysConfigBackup.cfg method="post">
+        <table width="600" height="90" border="0" cellpadding="0" cellspacing="0">
+          <tr>
+            <td height="20" colspan="2" class="tableTitle">软件配置备份</td>
+          </tr>
+          <tr>
+            <td height="20" colspan="2">&nbsp;</td>
+          </tr>
+          <tr>
+            <td width="100" height="20">
+              <button type="submit" class="btn btn-primary">备份
+              </button>
+            </td>
+            <td width="500" height="20">保存所有配置信息到你所指定的位置上</td>
+          </tr>
+          <tr>
+            <td height="20" colspan="2">&nbsp;</td>
+          </tr>
+        </table>
+      </form>
+      <form name="web_sys_restore_def" action=/goform/sysRestore method="post">
+        <table width="600" height="90" border="0" cellpadding="0" cellspacing="0">
+          <tr>
+            <td height="20" colspan="2" class="tableTitle">恢复出厂配置</td>
+          </tr>
+          <tr>
+            <td height="20" colspan="2">&nbsp;</td>
+          </tr>
+          <tr>
+            <td width="100" height="20">
+              <button type="submit" class="btn btn-primary">恢复出厂配置
+            </td>
+            <td width="500" height="20" align="center">该设备将恢复到出厂时的默认配置，以前的配置信息将会全部丢失。</td>
+          </tr>
+          <tr>
+            <td height="20" colspan="2">&nbsp;</td>
+          </tr>
+        </table>
+      </form>
+    </div>
+  </div>
   <script>
     function testAjax() {
       var xmlhttp;
