--- a/sysSetting/reboot.html
+++ b/sysSetting/reboot.html
@@ -15,21 +15,23 @@
     style="font-weight: bolder; text-align: center;background-color: rgb(241,241,241);height: 48px;line-height: 48px;">
     重启</h3>
   <br>
-  <form name="web_sys_reboot">
-    <table width="600" height="70" border="0" cellpadding="0" cellspacing="0">
-      <tr>
-        <td height="20" colspan="2" class="tableTitle">设备重启</td>
-      </tr>
-      <tr>
-        <td height="20" colspan="2">&nbsp;</td>
-      </tr>
-      <tr>
-        <td width="100" height="20">
-          <button type="submit" class="btn btn-primary">重启
-          </button>
-        </td>
-        <td width="500" height="20">设备重启前，请保存配置信息，重启期间，网络将自动断开。</td>
-      </tr>
-    </table>
-  </form>
+  <div class="container-fluid">
+    <form name="web_sys_reboot" action=/goform/sysRestore method="POST">
+      <table width="600" height="70" border="0" cellpadding="0" cellspacing="0">
+        <tr>
+          <td height="20" colspan="2" class="tableTitle">设备重启</td>
+        </tr>
+        <tr>
+          <td height="20" colspan="2">&nbsp;</td>
+        </tr>
+        <tr>
+          <td width="100" height="20">
+            <button type="submit" class="btn btn-primary">重启
+            </button>
+          </td>
+          <td width="500" height="20">设备重启前，请保存配置信息，重启期间，网络将自动断开。</td>
+        </tr>
+      </table>
+    </form>
+  </div>
 </body>
