--- a/top.html
+++ b/top.html
@@ -11,11 +11,11 @@
             font-size: 12px;
         }
 
-        BODY {
+        /* BODY {
             margin: 0px;
             background-image: url(img/bgimage.gif);
             background-repeat: repeat-x;
-        }
+        } */
     </style>
 </HEAD>
 
@@ -23,11 +23,12 @@
     <TABLE height="100" cellSpacing="0" cellPadding="0" width="100%" border="0">
         <TR>
             <TD width="190" height="90" align="left" vAlign="top">
-                <IMG src="img/logo3.png"
+                <IMG src="img/logo4.png"
                     style="display: block;width: 100%;height: 100%; background-color: white;">
             </TD>
             <TD width="5" height="90" bgcolor="#FFFFFF"></TD>
-            <TD height="90" align="left" vAlign="top"><img src="img/banner.gif"></TD>
+            <TD height="90" align="left" vAlign="top" style="background-image: url(img/bgimage.gif);
+            background-repeat: repeat-x;"><img src="img/banner.gif"></TD>
         </TR>
         <TR>
             <TD width="190" height="6" align="left" vAlign="top"></TD>
