--- a/newmenu.html
+++ b/newmenu.html
@@ -74,16 +74,16 @@
                         </a>
                         <ul id="SysMain" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./sysSetting/configinfo.html" target="mainframe">配置信息</a>
+                                <a href="./sysSetting/configinfo.asp" target="mainframe">配置信息</a>
                             </li>
                             <li>
-                                <a href="./sysSetting/upgrade.html" target="mainframe">软件升级</a>
+                                <a href="./sysSetting/upgrade.asp" target="mainframe">软件升级</a>
                             </li>
                             <li>
-                                <a href="./sysSetting/log.html" target="mainframe">软件日志</a>
+                                <a href="./sysSetting/log.asp" target="mainframe">软件日志</a>
                             </li>
                             <li>
-                                <a href="./sysSetting/reboot.html" target="mainframe">重启</a>
+                                <a href="./sysSetting/reboot.asp" target="mainframe">重启</a>
                             </li>
                         </ul>
                     </li>
