--- a/newmenu.html
+++ b/newmenu.html
@@ -17,6 +17,18 @@
             <div class="col-md-2" style="background: #ddd;min-height: 830px;">
                 <ul id="mainNav" class="nav nav-tabs nav-stacked">
                     <li>
+                        <a href="#deviceSetting" class="nav-header collapsed" data-toggle="collapse">
+                            设备管理
+                            <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                        </a>
+                        <ul id="deviceSetting" class="nav nav-list collapse secondmenu">
+                            <li>
+                                <a href="./deviceSetting/devInfo.html" target="mainframe">基本信息
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
                         <a href="#interfaceSetting" class="nav-header collapsed" data-toggle="collapse">
                             接口管理
                             <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
@@ -45,11 +57,11 @@
                                 <a href="./interface/stp.asp" target="mainframe">STP</a>
                             </li>
                             <li>
-                                <a href="./interface/igmp.asp" target="mainframe">IGMP-SWAPING</a>
+                                <a href="./interface/igmp.asp" target="mainframe">IGMP-SNOOPING</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a>EAPS</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </li>
                     <li>
@@ -58,10 +70,10 @@
                         </a>
                         <ul id="L3Setting" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./L3Protocal/rip.asp" target="mainframe">Rip</a>
+                                <a href="./L3Protocal/rip.asp" target="mainframe">RIP</a>
                             </li>
                             <li>
-                                <a href="./L3Protocal/ospf.asp" target="mainframe">Ospf</a>
+                                <a href="./L3Protocal/ospf.asp" target="mainframe">OSPF</a>
                             </li>
                             <li>
                                 <a href="./L3Protocal/staticRoute.asp" target="mainframe">静态路由</a>
@@ -76,7 +88,7 @@
                             <li>
                                 <a href="./sysSetting/configinfo.asp" target="mainframe">配置信息</a>
                             </li>
-                            <li>
+                            <!-- <li>
                                 <a href="./sysSetting/upgrade.asp" target="mainframe">软件升级</a>
                             </li>
                             <li>
@@ -84,7 +96,7 @@
                             </li>
                             <li>
                                 <a href="./sysSetting/reboot.asp" target="mainframe">重启</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </li>
                 </ul>
