--- a/top.html
+++ b/top.html
@@ -23,7 +23,7 @@
     <TABLE height="100" cellSpacing="0" cellPadding="0" width="100%" border="0">
         <TR>
             <TD width="190" height="90" align="left" vAlign="top">
-                <IMG src="img/logo4.png"
+                <IMG src="img/logo.png"
                     style="display: block;width: 100%;height: 100%; background-color: white;">
             </TD>
             <TD width="5" height="90" bgcolor="#FFFFFF"></TD>
