侧边栏调整

--- a/newmenu.html
+++ b/newmenu.html
@@ -18,46 +18,59 @@
                 <ul id="mainNav" class="nav nav-tabs nav-stacked">
                     <li>
                         <a href="#deviceSetting" class="nav-header collapsed" data-toggle="collapse">
+                            <i class="fa fa-minus-square" style="font-size: 20px;color: #6B8E23;"></i>
                             设备管理
-                            <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
                         </a>
                         <ul id="deviceSetting" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./deviceSetting/devInfo.html" target="mainframe">基本信息
+                                <a href="./deviceSetting/devInfo.html" target="mainframe"> &nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    基本信息
                                 </a>
                             </li>
                         </ul>
                     </li>
                     <li>
                         <a href="#interfaceSetting" class="nav-header collapsed" data-toggle="collapse">
+                            <i class="fa fa-minus-square" style="font-size: 20px;color: #6B8E23;"></i>
                             接口管理
-                            <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
                         </a>
                         <ul id="interfaceSetting" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./interface/eth.asp" target="mainframe">ETH
+                                <a href="./interface/eth.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    ETH
                                 </a>
                             </li>
                             <li>
-                                <a href="./interface/trunk.asp" target="mainframe">TRUNK
+                                <a href="./interface/trunk.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    TRUNK
                                 </a>
                             </li>
                             <li>
-                                <a href="./interface/vlan.asp" target="mainframe">VLAN
+                                <a href="./interface/vlan.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    VLAN
                                 </a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#L2Setting" class="nav-header collapsed" data-toggle="collapse">L2协议
-                            <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                        <a href="#L2Setting" class="nav-header collapsed" data-toggle="collapse">
+                            <i class="fa fa-minus-square" style="font-size: 20px;color: #6B8E23;"></i>
+                            L2协议
                         </a>
                         <ul id="L2Setting" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./interface/stp.asp" target="mainframe">STP</a>
+                                <a href="./interface/stp.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    STP</a>
                             </li>
                             <li>
-                                <a href="./interface/igmp.asp" target="mainframe">IGMP-SNOOPING</a>
+                                <a href="./interface/igmp.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    IGMP</a>
                             </li>
                             <!-- <li>
                                 <a>EAPS</a>
@@ -65,37 +78,53 @@
                         </ul>
                     </li>
                     <li>
-                        <a href="#L3Setting" class="nav-header collapsed" data-toggle="collapse">L3协议
-                            <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                        <a href="#L3Setting" class="nav-header collapsed" data-toggle="collapse">
+                            <i class="fa fa-minus-square" style="font-size: 20px;color: #6B8E23;"></i>
+                            L3协议                           
                         </a>
                         <ul id="L3Setting" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./L3Protocal/rip.asp" target="mainframe">RIP</a>
+                                <a href="./L3Protocal/rip.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    RIP</a>
                             </li>
                             <li>
-                                <a href="./L3Protocal/ospf.asp" target="mainframe">OSPF</a>
+                                <a href="./L3Protocal/ospf.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    OSPF</a>
                             </li>
                             <li>
-                                <a href="./L3Protocal/staticRoute.asp" target="mainframe">静态路由</a>
+                                <a href="./L3Protocal/staticRoute.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    静态路由</a>
                             </li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#SysMain" class="nav-header collapsed" data-toggle="collapse">软件维护
-                            <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                        <a href="#SysMain" class="nav-header collapsed" data-toggle="collapse">
+                            <i class="fa fa-minus-square" style="font-size: 20px;color: #6B8E23;"></i>
+                            软件维护
                         </a>
                         <ul id="SysMain" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./sysSetting/configinfo.asp" target="mainframe">配置信息</a>
+                                <a href="./sysSetting/configinfo.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    配置信息</a>
                             </li>
                             <!-- <li>
-                                <a href="./sysSetting/upgrade.asp" target="mainframe">软件升级</a>
+                                <a href="./sysSetting/upgrade.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    软件升级</a>
                             </li>
                             <li>
-                                <a href="./sysSetting/log.asp" target="mainframe">软件日志</a>
+                                <a href="./sysSetting/log.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    软件日志</a>
                             </li>
                             <li>
-                                <a href="./sysSetting/reboot.asp" target="mainframe">重启</a>
+                                <a href="./sysSetting/reboot.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    重启</a>
                             </li> -->
                         </ul>
                     </li>
