--- a/main.html
+++ b/main.html
@@ -4,38 +4,19 @@
 
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>无标题文档</title>
-  <style type="text/css">
-    <!--
-    .STYLE6 {
-      font-size: 24px
-    }
-    -->
-  </style>
+  <title>主页</title>
+  <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
-  <table width="800" height="300">
-    <tr>
-      <td width="194" height="100">&nbsp;</td>
-      <td width="448" height="100">&nbsp;</td>
-      <td width="142" height="100">&nbsp;</td>
-    </tr>
-    <tr>
-      <td width="194" height="50">
-        <!--div style="position:absolute;width:80%;height:80%;top:200px;left:150px;z-index:-1">
-          <img src="img/logo.png"  style="display: block;width:90%;height:90%;">
-        </div--!> 
-      </td>
-      <td width="448" height="50"><span class="STYLE6">欢迎登陆中飞芯电管理软件 WEB网管</span></td>
-      <td width="142" height="50">&nbsp;</td>
-    </tr>
-    <tr>
-      <td width="194">&nbsp;</td>
-      <td width="448">&nbsp;</td>
-      <td width="142">&nbsp;</td>
-    </tr>
-  </table>
+  <div class="container-fluid"  style="position: absolute; margin-top: 20px;height: 97%;width: 99%; background: url(img/bgm.png);
+  background-repeat: no-repeat;background-size: 100%;">
+    <div class="row">
+      <div style="text-align: center;height: 400px;line-height: 400px;">
+        <span style="font-weight: bolder;font-size: 24px;">欢迎登陆中飞芯电管理软件 WEB网管</span>
+      </div>
+    </div>
+  </div>
 
 
 </body>
