--- a/top.html
+++ b/top.html
@@ -1,23 +1,18 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
-<HTML>
+<!DOCTYPE html
+    PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 
-<HEAD>
+<head>
     <TITLE></TITLE>
-    <META http-equiv="Content-Type" content="text/html; charset=gb2312">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 
     <style type="text/css">
         TD {
             font-weight: bold;
             font-size: 12px;
         }
-
-        /* BODY {
-            margin: 0px;
-            background-image: url(img/bgimage.gif);
-            background-repeat: repeat-x;
-        } */
     </style>
-</HEAD>
+</head>
 
 <BODY>
     <TABLE height="100" cellSpacing="0" cellPadding="0" width="100%" border="0">
