--- a/main.html
+++ b/main.html
@@ -5,7 +5,7 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
   <title>主页</title>
-  <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css">
+  <link href="./css/bootstrap.min.css" rel="stylesheet" type="text/css">
 </head>
 
 <body>
