--- a/main.html
+++ b/main.html
@@ -10,10 +10,10 @@
 
 <body>
   <div class="container-fluid"  style="position: absolute; margin-top: 20px;height: 97%;width: 99%; background: url(img/bgm.png);
-  background-repeat: no-repeat;background-size: 100%;">
+  background-repeat: no-repeat;background-size: 100% 100%;">
     <div class="row">
-      <div style="text-align: center;height: 400px;line-height: 400px;">
-        <span style="font-weight: bolder;font-size: 24px;">欢迎登陆中飞芯电管理软件 WEB网管</span>
+      <div style="text-align: center;height: 600px;line-height: 600px;">
+        <span style="font-weight: bolder;font-size: 40px;">欢迎登陆中飞芯电管理软件 WEB网管</span>
       </div>
     </div>
   </div>
