--- a/bottom.html
+++ b/bottom.html
@@ -2,7 +2,7 @@
 <HTML>
 <HEAD>
 <TITLE></TITLE>
-<META http-equiv=Content-Type content="text/html;charset=gb2312" >
+<META http-equiv=Content-Type content="text/html;charset=utf-8" >
 <STYLE type=text/css>
 BODY {
 	background-color: #E0E0E0;
