--- a/deviceSetting/devInfo.html
+++ b/deviceSetting/devInfo.html
@@ -26,20 +26,28 @@
         <div id="devInfo" style="margin: auto;width: 800px;">
             <table class="table table-striped table-bordered">
                 <tr>
-                    <td><label class="mylabel" id="info1">1</label></td>
-                    <td><label class="mylabel" id="info2">2</label></td>
+                    <td width="30%"><label class="mylabel">up time:</label></td>
+                    <td width="20%"><label id="info1"></label></td>
+                    <td width="30%"><label class="mylabel">mac aging:</label></td>
+                    <td width="20%"><label id="info2"></label></td>
                 </tr>
                 <tr>
-                    <td><label class="mylabel" id="info3">3</label></td>
-                    <td><label class="mylabel" id="info4">4</label></td>
+                    <td><label class="mylabel">l2 mac:</label></td>
+                    <td><label id="info3"></label></td>
+                    <td><label class="mylabel">l3 mac:</label></td>
+                    <td><label id="info4"></label></td>
                 </tr>
                 <tr>
-                    <td><label class="mylabel" id="info5">5</label></td>
-                    <td><label class="mylabel" id="info6">6</label></td>
+                    <td><label class="mylabel">hardware version:</label></td>
+                    <td><label id="info5"></label></td>
+                    <td><label class="mylabel">platform version:</label></td>
+                    <td><label id="info6"></label></td>
                 </tr>
                 <tr>
-                    <td><label class="mylabel" id="info7">7</label></td>
-                    <td><label class="mylabel" id="info8">8</label></td>
+                    <td><label class="mylabel">product version:</label></td>
+                    <td><label id="info7"></label></td>
+                    <td><label class="mylabel">build time:</label></td>
+                    <td><label id="info8"></label></td>
                 </tr>
             </table>
         </div>
