--- a/newmenu.html
+++ b/newmenu.html
@@ -23,7 +23,7 @@
                         </a>
                         <ul id="deviceSetting" class="nav nav-list collapse secondmenu">
                             <li>
-                                <a href="./deviceSetting/devInfo.html" target="mainframe"> &nbsp;&nbsp;&nbsp;&nbsp;
+                                <a href="./deviceSetting/devInfo.asp" target="mainframe"> &nbsp;&nbsp;&nbsp;&nbsp;
                                     <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
                                     基本信息
                                 </a>
@@ -120,12 +120,12 @@
                                 <a href="./sysSetting/log.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
                                     <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
                                     软件日志</a>
-                            </li>
+                            </li> -->
                             <li>
                                 <a href="./sysSetting/reboot.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
                                     <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
                                     重启</a>
-                            </li> -->
+                            </li>
                         </ul>
                     </li>
                 </ul>
