--- a/bottom.html
+++ b/bottom.html
@@ -32,7 +32,7 @@ BODY {
 <BODY >
 <table width="100%" border="0">
   <tr>
-    <td class="bottomtext">Copyright &copy 2021-2022 ÎäººÖÐ·ÉÐ¾µç All rights reserved</td>
+    <td class="bottomtext">Copyright &copy 2021-2022 æ­¦æ±‰ä¸­é£žèŠ¯ç”µ All rights reserved</td>
   </tr>
 </table>
 </BODY>
