--- a/newmenu.html
+++ b/newmenu.html
@@ -72,15 +72,17 @@
                                     <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
                                     IGMP</a>
                             </li>
-                            <!-- <li>
-                                <a>EAPS</a>
-                            </li> -->
+                            <li>
+                                <a href="./interface/eaps.html" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                    <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
+                                    EAPS</a>
+                            </li>
                         </ul>
                     </li>
                     <li>
                         <a href="#L3Setting" class="nav-header collapsed" data-toggle="collapse">
                             <i class="fa fa-minus-square" style="font-size: 20px;color: #6B8E23;"></i>
-                            L3协议                           
+                            L3协议
                         </a>
                         <ul id="L3Setting" class="nav nav-list collapse secondmenu">
                             <li>
