--- a/interface/eaps.html
+++ b/interface/eaps.html
@@ -27,6 +27,158 @@
         style="font-weight: bolder; text-align: center;background-color: rgb(241,241,241);height: 48px;line-height: 48px;">
         EAPS</h3>
     <br>
+    <div class="container-fluid">
+        <div class="row">
+            <label class="col-md-1" style="text-transform: uppercase;">ERRP状态:</label>
+            <label class="col-md-1" style="color: #FFA07A;" id="txtStatus">不使能</label>
+            <div class="col-md-2">
+                <button type="button" id="btnErrpEnable" class="btn btn-primary">使能</button>
+                <button type="button" id="btnErrpDiasabe" class="btn btn-primary">不使能</button>
+            </div>
+        </div>
+        <div class="row">
+            <button class="btn btn-primary">添加</button>
+        </div>
+        <div class="row">
+            <div id="errpHead">
+                <table class="table table-striped table-bordered table-hover">
+                    <thead style="font-weight: bolder;">
+                        <tr>
+                            <td >name</td>
+                            <td >id</td>
+                            <td >status</td>
+                            <td >work mode</td>
+                            <td >state</td>
+                            <td >control vlan</td>
+                            <td >protect vlan</td>
+                            <td >primary</td>
+                            <td >second</td>
+                            <td >hello time</td>
+                            <td >hello fail time</td>
+                            <td >up flush fail time</td>
+                            <td>操作</td>
+                        </tr>
+                    </thead>
+                </table>
+            </div>
+            <div style="height:650px;overflow-y:auto;overflow-x: hidden;margin-top: -22px;" id="errpTable">
+                <table id="myTable" class="table table-striped table-bordered table-hover">
+                    <tbody id="tBody">
+                        <tr>
+                            <td>
+                                <button type="button" class="btn btn-primary" data-toggle="modal" name="btnEdit">编辑</button>
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
+    <div class="modal fade" id="myModal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                    <h4 class="modal-title" id="myModalLabel">添加</h4>
+                </div>
+                <div class="modal-body">
+                    <table class="table table-striped table-bordered">
+                        <tbody>
+                            <tr>
+                                <td>Domain name</td>
+                                <td>
+                                    <input id="domainName" maxlength="30" placeholder="请输入" type="text" title="端口输入框" style="width: 100%;">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Domain mode</td>
+                                <td>
+                                    <select>
+                                        <option>master</option>
+                                        <option>transit</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Control vlan</td>
+                                <td>
+                                    <select>
+                                        <option>vlan 100</option>
+                                        <option>vlan 200</option>
+                                        <option>vlan 300</option>
+                                        <option>vlan 400</option>
+                                        <option>vlan 500</option>
+                                        <option>vlan 600</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>Protect vlan</td>
+                                <td>
+                                    <select>
+                                        <option>vlan 100</option>
+                                        <option>vlan 200</option>
+                                        <option>vlan 300</option>
+                                        <option>vlan 400</option>
+                                        <option>vlan 500</option>
+                                        <option>vlan 600</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>primary</td>
+                                <td>
+                                    <select>
+                                        <option>eth0/0</option>
+                                        <option>eth0/1</option>
+                                        <option>eth0/2</option>
+                                        <option>eth0/3</option>
+                                        <option>eth0/4</option>
+                                        <option>eth0/5</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>second</td>
+                                <td>
+                                    <select>
+                                        <option>eth0/0</option>
+                                        <option>eth0/1</option>
+                                        <option>eth0/2</option>
+                                        <option>eth0/3</option>
+                                        <option>eth0/4</option>
+                                        <option>eth0/5</option>
+                                    </select>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>hello time</td>
+                                <td>
+                                    <input id="helloTime" maxlength="30" placeholder="请输入" type="text" title="端口输入框" style="width: 100%;">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>hello fail time</td>
+                                <td>
+                                    <input id="helloFailTime" maxlength="30" placeholder="请输入" type="text" title="端口输入框" style="width: 100%;">
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>up flush fail time</td>
+                                <td>
+                                    <input id="upFlushTime" maxlength="30" placeholder="请输入" type="text" title="端口输入框" style="width: 100%;">
+                                </td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">关闭</button>
+                    <button type="button" class="btn btn-primary" id="btnSave">提交</button>
+                </div>
+            </div>
+        </div>
+    </div>
     <script>
         var dataset = [];
         function getData() {
@@ -36,6 +188,10 @@
         function loadPage(){
 
         }
+
+        $("#tBody").on('click', '[name="btnEdit"]', function () {
+            $("#myModal").modal('show');
+        });
 
         $(document).ready(function(){
             getData();
