--- a/newmenu.html
+++ b/newmenu.html
@@ -73,7 +73,7 @@
                                     IGMP</a>
                             </li>
                             <li>
-                                <a href="./interface/eaps.html" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
+                                <a href="./interface/eaps.asp" target="mainframe">&nbsp;&nbsp;&nbsp;&nbsp;
                                     <i class="fa fa-leaf" style="font-size: 20px;color: #6B8E23;"></i>
                                     EAPS</a>
                             </li>
